--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
 * {
 	margin: 0;
@@ -130,3 +131,40 @@ input[type=checkbox]:checked ~ #overlay-button span:after {
 #overlay li:hover {
 	background-color: #ACC3C3;
 }
+.template {
+	display: none;
+}
+.section-title {
+	font-family: 'Playfair Display', serif;
+	color: #212121;
+	position: relative
+}
+.section-title::before {
+	content: "+";
+	font-size: 2.4rem;
+	font-family: 'Roboto', sans-serif;
+	color: #FFD500;
+	position: absolute;
+	left: -4rem;
+}
+.source-date, .source-title{
+	font-family: 'Playfair Display', serif;
+}
+.source-excerpt {
+	font-size: 1.125rem;
+	color: #212121;
+	font-weight: 300;
+	line-height: 1.95rem;
+	letter-spacing: 0.3px
+}
+.source-excerpt a {
+	color: inherit;
+	text-decoration: none;
+	font-weight: bold;
+	border-bottom: 2px solid #FFD500;
+}
+
+
+
+
+
