--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
 * {
@@ -20,9 +21,11 @@ html, body {
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
-	/*font-size: 1.125rem;
-	color: #1B2020;*/
+	font-family: 'Roboto Slab', sans-serif;
+	font-size: 18px;
+	color: #212121;
+	letter-spacing: 0.3px;
+	line-height: 31px;
 }
 
 .preload * {
