--- a/style/style.css
+++ b/style/style.css
@@ -111,7 +111,7 @@ a {
 	color: #212121;
 	position: relative
 }
-.h1:before {
+h1:before {
 	content: "+";
 	font-size: 2.4rem;
 	font-family: 'Roboto', sans-serif;
