--- a/style/style.css
+++ b/style/style.css
@@ -122,14 +122,15 @@ h1:before {
 .source-date, .source-title{
 	font-family: 'Playfair Display', serif;
 }
-.source-excerpt {
+.section-desc{
 	font-size: 1.125rem;
 	color: #212121;
 	font-weight: 300;
 	line-height: 1.95rem;
 	letter-spacing: 0.3px
 }
-.source-excerpt a {
+
+.section-desc a {
 	color: inherit;
 	text-decoration: none;
 	font-weight: bold;
@@ -186,12 +187,10 @@ h1:before {
 	font-size: 1.125rem;
 	color: #212121;
 	font-family: 'Playfair Display', serif;
-	text-align: center;
 }
 .card-desc {
 	font-size: .9rem;
 	color: #4A4A4A;
-	font-family: 'Roboto', sans-serif;
 	text-align: center;
 	line-height: 1.4;
 }
@@ -225,7 +224,41 @@ h1:before {
 	font-size: .7rem;
 	line-height: 1.3;
 }
-
+.sub-title-pf{
+	font-size: 1.2rem;
+	font-family: 'Playfair Display', sans-serif;
+	font-weight: bold;
+}
+.icon-link {
+	text-decoration: none;
+}
+.icon-link i {
+	color: #032B43;
+	width: 30px;
+	height: 30px;
+}
+.icon-link span {
+	color: #212121;
+}
+.icon-link:hover i {
+	color: #FFD500;
+	background-color:#212121;
+}
+.ns-input{
+  	border: 1px solid rgba(3, 43, 67, .5);
+  	box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
+}
+.send-btn {
+  	color: #212121;
+	background-color: #FFD500;
+	font-family: 'Playfair Display', sans-serif;
+	font-weight: bold;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5)	
+}
+.send-btn:hover{
+	background-color: #212121;
+	color: #FFD500;
+}
 /*------------------------------*/
 footer {
 	color: white;
